--- a/gameoftrons.properties
+++ b/gameoftrons.properties
@@ -1,7 +1,11 @@
-size=20
+defaultPlayerCount=4
+rangeStart=2
+rangeEnd=6
+maxWaitingTime=60
 gameSpeed=200
+gridSize=20
 remote=false
-nameserver=127.0.0.1:4321
+partner=false
 p0_l=A
 p0_r=D
 p1_l=LEFT
