--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>de.hawh.beta3.application.game.view/de.hawh.beta3.application.game.view.Screen.HelloApplication</mainClass>
+                            <mainClass>de.hawh.beta3.application/de.hawh.beta3.applicationEntrypoint</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
