--- a/gameoftrons.properties
+++ b/gameoftrons.properties
@@ -2,9 +2,9 @@ defaultPlayerCount=4
 rangeStart=2
 rangeEnd=6
 maxWaitingTime=60
-gameSpeed=1000
+gameSpeed=200
 gridSize=50
-remote=true
+remote=false
 partner=false
 p0_l=A
 p0_r=D
