--- a/gameoftrons.properties
+++ b/gameoftrons.properties
@@ -2,9 +2,9 @@ defaultPlayerCount=2
 rangeStart=2
 rangeEnd=6
 maxWaitingTime=60
-gameSpeed=600
+gameSpeed=500
 gridSize=50
-remote=true
+remote=false
 partner=false
 p0_l=A
 p0_r=D
